--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,14 @@ jobs:
       with:
         python-version: '3.8'
 
+    - name: List files in the directory
+      run: ls -la
+
     - name: Install dependencies
       run: |
         python -m venv venv
         . venv/bin/activate
-        pip install -r ./requirements.txt
+        pip install -r requirements.txt
 
     - name: Run lint
       run: |
