--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m venv venv
         . venv/bin/activate
-        pip install -r ../requirements.txt
+        pip install -r requirements.txt
 
     - name: Run lint
       run: |
