--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-test:
@@ -31,7 +34,7 @@ jobs:
     - name: Run tests
       run: |
         pip install pytest
-        pytest tests/ --maxfail=5 --disable-warnings
+        pytest
 
   deploy:
     runs-on: ubuntu-latest
