--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,26 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
+
     steps:
-    - name: Deploy (Simulated)
-      run: echo "Deployment steps go here."
+    - name: Check out the code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Deploy to Elastic Beanstalk
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        pip install awsebcli
+        eb init -p python-3.9 --region us-east-1 finaldevops --platform python-3.9 --region us-east-1
+        eb deploy
