--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,11 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
         pip install awsebcli
+        mkdir -p ~/.aws
+        echo "[default]" > ~/.aws/credentials
         echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> ~/.aws/credentials
         echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> ~/.aws/credentials
+        echo "[default]" > ~/.aws/config
         echo "region = us-east-1" >> ~/.aws/config
         eb init -p python-3.9 finaldevops --region us-east-1 --platform python-3.9 --region us-east-1 --source codecommit
         eb deploy
